add new edits for create course , school and other pages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,52 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-  background-color:#f5f6fa;
+.langDropDown {
+  left: -40px !important;
+  top: 13px !important;
+}
+
+body {
+  background-color: #f5f6fa;
   display: grid;
-  
+}
+
+[data-theme="dark"] body {
+  background-color: #141414;
+}
+[data-theme="dark"] body .card {
+  background-color: #0D0D0D;
+  color: white ;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 25px 0;
+  user-select: none;
+}
+
+.pagination li {
+  margin: 8px !important;
+  border: 1px solid rgb(221, 218, 218);
+  border-radius: 5px;
+}
+
+.pagination li:hover {
+  opacity: 0.8;
+}
+
+.pagination li a {
+  padding: 7px 14px !important;
+  display: block !important;
+  font-weight: 500;
+  font-size: 13px;
+}
+
+
+
+.pagination li.active {
+  background-color: #3E5AF0 !important;
+  color: white;
 }
